funcionalidad de obtener todos los recursos
